--- a/app/views/partials/_navigation.html.erb
+++ b/app/views/partials/_navigation.html.erb
@@ -1,28 +1,13 @@
-<%
-@cur_html = 'active'.html_safe
-%>
-
-<ul id="nav" class="flex-row">
-	<li class="flex-small <%= current_page?('/index') ? @cur_html : '' %>"">
-		<a href="/index">Inicio</a>
-	</li>
-	<li class="flex-small <%= current_page?('/acerca') ? @cur_html : '' %>"">
-		<a href="/acerca">Acerca de</a>
-	</li>
-	<li class="flex-small <%=current_page?('/articulos') || controller.controller_name == 'posts' ? @cur_html : '' %>"">
-		<a href="/articulos">Articulos</a>
-	</li>
-	<li class="flex-small <%= current_page?('/servicios') ? @cur_html : '' %>"">
-		<a href="/servicios">Servicios</a>
-	</li>
-	<!--
-	<li class="flex-small <%= current_page?('/contacto') ? @cur_html : '' %>"">
-		<a href="/contacto">Contacto</a>
-	</li>
-	-->
-	<% if user_signed_in? %>
-	<li class="flex-small <%= current_page?('/dashboard') ? @cur_html : '' %>"">
-		<a href="/dashboard">Dashboard</a>
-	</li>
-	<% end %>
-</ul>
+<div class="row g-0">
+  <div class="col">
+    <div class="d-flex flex-row bg-dark rounded-top">
+      <a href="/index" class="main-nav-item flex-fill py-3 text-center text-decoration-none text-white <%= current_page?('/index') ? 'active' : '' %>">Inicio</a>
+      <a href="/acerca" class="main-nav-item flex-fill py-3 text-center text-decoration-none text-white <%= current_page?('/acerca') ? 'active' : '' %>">Acerca de</a>
+      <a href="/articulos" class="main-nav-item flex-fill py-3 text-center text-decoration-none text-white <%= current_page?('/articulos') || controller.controller_name == 'posts' ? 'active' : '' %>">Articulos</a>
+      <a href="/servicios" class="main-nav-item flex-fill py-3 text-center text-decoration-none text-white <%= current_page?('/servicios') ? 'active' : '' %>">Servicios</a>
+      <% if user_signed_in? %>
+        <a href="/dashboard" class="main-nav-item flex-fill py-3 text-center text-decoration-none text-white <%= current_page?('/dashboard') ? 'active' : '' %>">Dashboard</a>
+      <% end %>
+    </div>
+  </div>
+</div>
